Changes from Before Distraction.

--- a/doc/java-cdr255.texi
+++ b/doc/java-cdr255.texi
@@ -97,7 +97,7 @@ wider-scope project.
 @printindex fn
 
 @c *********************************************************************
-@node Procedure Types, GNU FDL, Environment Variables, Top
+@node Procedure Types, GNU FDL, Programming Index, Top
 @cindex Procedure Types
 @include procedure-types.texi
 
